disposition des element html est debutdu css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <title>Tododoto</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head> 
 <body>
     <div class="header">
-        
+        <h1 class="title">Tododoto</h1>
+				<!-- <button class="button" id="setting_gear"> 0 </button> -->
     </div>
-    <div class="body">
 
-
-    	</div>
+    <div class="main">
+			<div class="actions">
+				<button class="button long" id="filter">Filter</button>
+				<button class="button long" id="add_task">New Task</button>
+			</div>
+			<div class="task_list">
+				<p>empty</p>
+				<!-- js generated tasks -->
+			</div>
+    </div>
 </body>
 </html> 
